# mp4_transcriber

./: .gitignore  README.md  download_nltk_data.py  pyproject.toml  quick_paths.example.json  test_gui.py
src/mp4_transcriber/: __init__.py  __main__.py  audio.py  cli.py  processor.py  text_processing.py  transcription.py
src/mp4_transcriber/gui/: __init__.py  app.py  main_window.py  processor.py  quick_path_dialog.py
tests/: __init__.py  test_audio.py  test_text_processing.py
